Creating product card and replicating 9 times, needs pics changed to correct pics. Finishing about section content and layout, needs work to fix distortion when resizing window,

--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,23 @@ html {
 
 body {
     background-color: #FFFFFF;
-    font-family:  'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
     margin: 0;
-    letter-spacing: 50;
+    font-weight: lighter;
+}
+
+h1{
+    font-size: 1.7em;
+    margin-bottom: 0.5em ;
+    font-weight: lighter;
 }
 a {
     text-decoration: none;
     color: black;
+}
+
+p{
+   line-height: 25px;
 }
 .flex-container{
     display: flex;
@@ -32,7 +42,7 @@ a {
     width: 100%;
     justify-content: space-around;
     height: 75px;
-    font-weight: lighter;
+    
     
 }
 
@@ -106,22 +116,33 @@ height: 25px;
 }
 
 .section-name{
-
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    width: 90%;
+    margin: auto;
+    margin-top: 5%;
+    font-size: larger;
+    font-family: Arial, Helvetica, sans-serif ;
 
 }
 .hr-large-section{
-    width: 55%;
+    width: 50%;
     height: 0;
     border-style: solid;
     border-width: 3px;
+    margin: 0%;
 }
 .home{
     display: flex;
     background-image: linear-gradient(to right, black, transparent, black), url(assets/Home_main_handsMakingPottery.jpg);
-    height: 633px;   
+    height: 30rem;   
     background-size: cover;
     flex-direction: row;
-    justify-content: space-evenly; 
+    justify-content: space-evenly;
+    flex-wrap: wrap; 
+    background-position: center;
+    background-repeat: no-repeat;    
        
 }
 .home-img{
@@ -131,19 +152,20 @@ height: 25px;
 
 .textbox{
     display: flex;
-    width: 1200px;
+    width: 1390px;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .floating-text{
     display: flex;
-    width: 200px;
+    width: 400px;
     flex-wrap: wrap;
     color: white;
     font-size: xxx-large;
     margin: 20px;
-    letter-spacing: 10px;
+    letter-spacing: 3px;
+    font-style: italic;
     
 }
 .text1{
@@ -156,44 +178,148 @@ height: 25px;
     margin-bottom: 100px;
 }
 .about{
-
+    /*grid-template-areas: ;*/
+    display: flex;
+    margin: auto;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    width: 90%;
+    justify-content: space-between;
+    
+    /*margin-top: 3%;*/
+    
+    
 }
 .about-left{
+    display: flex;
+    width: 90%;
+    flex-direction: column;
+    margin: 0;
+    row-gap: 5%;
+    
+    align-items: stretch;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
+    height: fit-content;
+}
+.toptext{
+    width: 84%;
+    margin-left: 5%;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    
+
 
 }
+.about-left-bottom{
+    display: flex;
+    align-items: stretch;
+    flex-direction: row;
+    column-gap: 1%;
+    margin-right: 5%;
+    margin-left: 0%;
+    margin-top: 0%;
+    
+}
+.bottomtext{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10%;
+    
+    width: 50%;
+}
 .about-pic1{
+    
+    width: 45%;
+    
 
 }
 .about-right{
+    margin: 1%;
+    margin-right: 5%;
+    margin-top: 0%;
+    margin-bottom: 0%;
 
 }
-.about-pic2{
+.about-pic2{    
+    width: 100%;
+    height: 100%;
+    transform: scalex(-1);
+    
     
 }
 .products{
-
+    width: 90%;
 }
-.product-card{
 
+.card-grid{
+    display: flex;
+    width: 100%;
+    margin: 5%;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.product-card{
+    display: flex;
+    flex-direction: column;
+    width: 22%;
+    margin: 5%;
 }
 .product-img{
-
+    width: 100%;
 }
+
+.card-row1{
+    display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+}
+
 .product-name{
+    font-size: 22px;
+    font-weight: lighter;
 
 }
 .product-price{
 
 }
+
 .hr-large-cards{
+    width: 66%;
+    height: 0;
+    border-style: solid;
+    border-width: 3px;
+    margin: 0%;
+}
+
+.card-text{
 
 }
+
+.card-bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .product-learn{
     /*text-decoration: underline;*/
     color: #BF7631;
+    
 }
 
 .hr-small-learn{
+    width: 100%;
+    height: 0;
+    border-style: solid;
+    border-width: 0.1px;
+    margin: 0%;
+    border-color: #BF7631;;
+    margin-top: 3%;
+}
+
+.add-button{
 
 }
 
@@ -204,6 +330,10 @@ height: 25px;
     background-color: #BF7631;
     color: #f0f0f0;
     border-style: none;
+    height: 1.7rem;
+    font-size: small;
+    font-weight: 600;
+    width: 7rem;
 }
 footer {
     display: flex;
